--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ Repository = "https://github.com/filliptm/ComfyUI_FL-Trainer"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "machinedelusions"
 DisplayName = "ComfyUI_FL-Trainer"
 Icon = ""
